kubernetes/ckad/drupal-app/drupal.yml
# This manifest assumes 'drupal' namespace is already present:
#
#   kubectl create namespace drupal
#
# Apply the manifest with:
#
#   kubectl apply -f drupal.yml
---
kind: ConfigMap
apiVersion: v1
metadata:
  name: drupal-config
  namespace: drupal
data:
  # Note: This is NOT secure. Don't use this in production!
  settings.php: |-
    <?php
    $databases['default']['default'] = [
      'database' => 'drupal',
      'username' => 'drupal',
      'password' => 'drupal',
      'prefix' => '',
      'host' => 'mariadb',
      'port' => '3306',
      'namespace' => 'Drupal\\Core\\Database\\Driver\\mysql',
      'driver' => 'mysql',
    ];
    $settings['hash_salt'] = 'OTk4MTYzYWI4N2E2MGIxNjlmYmQ2MTA4';
    $settings['trusted_host_patterns'] = ['^.+$'];
    $settings['config_sync_directory'] = 'sites/default/files/config_OTk4MTYzY';

---
kind: PersistentVolumeClaim
apiVersion: v1
metadata:
  name: drupal-files-pvc
  namespace: drupal
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: drupal
  namespace: drupal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
        - name: drupal
          image: 'drupal:8.8-apache'
          ports:
            - containerPort: 80
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 60
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
          volumeMounts:
            - mountPath: /var/www/html/sites/default/
              name: drupal-settings
            - mountPath: /var/www/html/sites/default/files/
              name: drupal-files
          resources:
            limits:
              cpu: '1'
              memory: '512Mi'
            requests:
              cpu: '500m'
              memory: '256Mi'
      volumes:
        - name: drupal-settings
          configMap:
            name: drupal-config
        - name: drupal-files
          persistentVolumeClaim:
            claimName: drupal-files-pvc

---
kind: Service
apiVersion: v1
metadata:
  name: drupal
  namespace: drupal
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: drupal

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: drupal
  namespace: drupal
spec:
  ingressClassName: traefik-lb
  rules:
    - host: drupal.fritz.box
      http:
        paths:
          - path: /
            backend:
              serviceName: drupal
              servicePort: 80
